--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "11.1.0",
     "nextjs-progressbar": "0.0.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-select": "^4.3.1",
+    "sass": "^1.38.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
