--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "nextjs-progressbar": "0.0.11",
     "react": "17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-select": "^4.3.1",
