--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.16.13",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "nextjs-progressbar": "0.0.11",
