--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-select": "^4.3.1",
+    "react-textarea-autosize": "^8.3.3",
+    "reactive-button": "^1.3.7",
     "sass": "^1.38.0"
   },
   "devDependencies": {
