--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
     "react-select": "^4.3.1",
     "react-textarea-autosize": "^8.3.3",
