--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "antd": "^4.16.13",
+    "axios": "^0.22.0",
+    "dateformat": "^5.0.1",
     "framer-motion": "^4.1.17",
+    "humps": "^2.0.1",
     "next": "11.1.0",
     "nextjs-progressbar": "0.0.11",
     "react": "17.0.2",
@@ -18,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
+    "react-markdown": "^7.0.1",
     "react-select": "^4.3.1",
     "react-textarea-autosize": "^8.3.3",
     "reactive-button": "^1.3.7",
