--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dateformat": "^5.0.1",
     "framer-motion": "^4.1.17",
     "humps": "^2.0.1",
+    "luxon": "^2.0.2",
     "next": "11.1.0",
     "nextjs-progressbar": "0.0.11",
     "react": "17.0.2",
