--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4.1.17",
     "humps": "^2.0.1",
     "luxon": "^2.0.2",
+    "moment": "^2.29.1",
     "next": "11.1.0",
     "nextjs-progressbar": "0.0.11",
     "react": "17.0.2",
