--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
     "react-markdown": "^7.0.1",
+    "react-qr-code": "^2.0.3",
     "react-select": "^4.3.1",
     "react-share": "^4.4.0",
     "react-textarea-autosize": "^8.3.3",
