--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-share": "^4.4.0",
     "react-textarea-autosize": "^8.3.3",
     "reactive-button": "^1.3.7",
-    "sass": "^1.38.0"
+    "sass": "^1.38.0",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
