--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-horizontal-scrolling-menu": "^2.5.0",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-markdown": "^7.0.1",
     "react-qr-code": "^2.0.3",
     "react-select": "^4.3.1",
